assets/css/main.scss
---
---

@charset "utf-8";

@import
  "tufte",
  "tufte-extra",
  "tufte-pandoc-jekyll-extra",
  "pandoc",
  "pandoc-solarized"
;

.header-anchor,
.section-comments-toggle {
  margin-left: 0.3rem;
  font-size: 0.75em;
  line-height: 1;
  opacity: 0;
  text-decoration: none;
}

.section-comments-toggle {
  appearance: none;
  -webkit-appearance: none;
  border: 0;
  padding: 0;
  background: transparent;
  color: inherit;
  cursor: pointer;
  font-family: inherit;
}

h1:hover .header-anchor,
h2:hover .header-anchor,
h3:hover .header-anchor,
h4:hover .header-anchor,
h5:hover .header-anchor,
h6:hover .header-anchor,
h1:hover .section-comments-toggle,
h2:hover .section-comments-toggle,
h3:hover .section-comments-toggle,
h4:hover .section-comments-toggle,
h5:hover .section-comments-toggle,
h6:hover .section-comments-toggle,
.header-anchor:focus,
.section-comments-toggle:focus,
.section-comments-toggle[aria-expanded="true"] {
  opacity: 1;
}

.header-anchor:focus,
.section-comments-toggle:focus {
  outline: 1px dotted currentColor;
  outline-offset: 0.15rem;
}

.section-comments {
  float: left;
  clear: left;
  margin-left: -33.333%;
  margin-right: 5.333%;
  width: 28%;
  margin-top: -0.75rem;
  margin-bottom: 1.5rem;
  font-size: 1.1rem;
  line-height: 1.3;
  vertical-align: baseline;
  position: relative;
}

.section-comments p,
.section-comments-title {
  width: auto;
  margin-top: 0;
  margin-bottom: 0.5rem;
  font-style: italic;
}

.giscus-section {
  margin-top: 0.5rem;
}

@media (min-width: 1100px) {
  body {
    width: 75%;
    padding-left: 25%;
  }
}

@media (max-width: 1099px) {
  .section-comments {
    display: block;
    float: left;
    left: 1rem;
    clear: both;
    width: 95%;
    margin: 1rem 2.5%;
    vertical-align: baseline;
    position: relative;
  }
}

